--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -7200,6 +7200,7 @@ import-export-center=مركز الاستيراد/التصدير
 import-file=استيراد ملف
 import-file-max-size=أقصى حجم لملف الاستيراد
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=أقصى حجم لملف الاستيراد يجب أن يكون ضمن حدود أقصى حجم لطلب التحميل
+import-files=Import Files (Automatic Copy)
 import-fragments=استيراد أجزاء
 import-from-ldap=استيراد من LDAP
 import-from-ldap-description=عيّن هذا الخيار على "صواب" إذا كنت تريد استيراد المستخدمين من LDAP بعد تسجيل الدخول بنجاح من خلال OpenSSO. يجب تكوين إعدادات LDAP بشكل صحيح في قسم LDAP. إذا تم تعيين هذا الخيار على "خطأ"، سيتم إنشاء المستخدمين عن طريق بيانات OpenSSO المتوفرة.
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=الرجاء تحديث المت
 please-upload-a-file=يُرجى تحميل ملف.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=يُرجى تحميل ملف بامتداد صالح (ملف JAR أو LPKG أو WAR).
 please-upload-your-translation-file=يرجى تحميل ملف الترجمة الخاص بك (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=يرجى التأكد من خواص تهيئة المستودع.
 please-wait=يُرجى الانتظار.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=يُرجى الانتظار حتى اكتمال عمليات النشر على الموقع البعيد.
@@ -12328,6 +12330,7 @@ repeatable=قابل للتكرار
 repeats=التكرارات
 replace=استبدال
 replace-certificate=استبدال الشهادة
+replace-files=Replace Files (Automatic Copy)
 replace-with=استبدال بـ:
 replacement=بديل
 replacement-product=منتج بديل
