--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centre d'importació/exportació
 import-file=Importa el fitxer
 import-file-max-size=Mida màxima del fitxer d'importació
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=La mida màxima del fitxer d'importació ha d'estar dins els límits de la mida màxima de la sol·licitud de pujada
+import-files=Import Files (Automatic Copy)
 import-fragments=Importa fragments
 import-from-ldap=Importa des d'LDAP
 import-from-ldap-description=Establiu això en cert si voleu importar els usuaris de l'LDAP després d'haver connectat amb èxit a través d'OpenSSO. Els paràmetres LDAP s'han de configurar correctament a la secció LDAP. Si s'estableix en fals, els usuaris es crearan a partir de les dades proporcionades per OpenSSO.
@@ -11440,6 +11441,7 @@ please-upgrade-your-browser-to-use-this-feature=Actualitzeu el navegador per uti
 please-upload-a-file=Carregueu un fitxer.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Carregeu un fitxer amb una extensió vàlida (JAR, LPKG o WAR).
 please-upload-your-translation-file=Pugeu el fitxer de traducció (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Verifiqueu els paràmetres de configuració del repositori.
 please-wait=Esperi per favor.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Espereu que es completi el procés de publicació al lloc web remot remot.
@@ -12330,6 +12332,7 @@ repeatable=Repetible
 repeats=Repeticions
 replace=Reemplaça
 replace-certificate=Substitueix el certificat
+replace-files=Replace Files (Automatic Copy)
 replace-with=Reemplaça amb:
 replacement=Substitució
 replacement-product=Producte de substitució
