--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centrum importu a exportu (Automatic Translation)
 import-file=Importovat soubor (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Import fragmentů (Automatic Translation)
 import-from-ldap=Import z protokolu LDAP (Automatic Translation)
 import-from-ldap-description=Pokud chcete importovat uživatele z protokolu LDAP po úspěšném přihlášení přes OpenSSO, nastavte tuto hodnotu na hodnotu true. Nastavení protokolu LDAP je třeba správně nakonfigurovat v části LDAP. Pokud je nastavena na hodnotu false, budou uživatelé vytvořeni z dat poskytnutých OpenSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Prosím použijte novější int
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Nahrajte soubor s platnou příponou (JAR, LPKG nebo WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Ověřte, prosím, nastavení repositáře.
 please-wait=Počkejte prosím. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Počkejte prosím na dokončení procesů publikování na vzdáleném webu. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Opakovatelné
 repeats=Opakování
 replace=Nahradit (Automatic Translation)
 replace-certificate=Nahradit certifikát (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Nahradit: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
