--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import-/eksportcenter (Automatic Translation)
 import-file=Importer fil (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Importer fragmenter (Automatic Translation)
 import-from-ldap=Import from LDAP (Automatic Copy)
 import-from-ldap-description=Angiv dette til true, hvis du vil importere brugerne fra LDAP efter vellykket logon via OpenSSO. LDAP-indstillingerne skal konfigureres korrekt i LDAP-sektionen. Hvis dette er angivet til falsk, oprettes brugerne ud fra opensso-leverede data. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Please upgrade your browser to u
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Overfør en fil med et gyldigt filtypenavn (JAR, LPKG eller WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Kontroller konfigurationsparametrene for lageret. (Automatic Translation)
 please-wait=Vent venligst. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Vent, mens udgivelsesprocesserne fuldføres på fjernwebstedet. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Repeatable (Automatic Copy)
 repeats=Gentager (Automatic Translation)
 replace=erstatte (Automatic Translation)
 replace-certificate=Erstat certifikat (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Replace with: (Automatic Copy)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
