--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import-/Export-Center
 import-file=Datei importieren
 import-file-max-size=Maximale Größe der Importdatei
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Die maximale Größe der Importdatei muss mit der maximalen Größe der Upload-Anfrage übereinstimmen
+import-files=Import Files (Automatic Copy)
 import-fragments=Fragmente importieren
 import-from-ldap=Importieren von LDAP
 import-from-ldap-description=Aktivieren Sie diese Einstellung, wenn Sie die Benutzer von LDAP nach erfolgreicher Anmeldung über OpenSSO importieren möchten. Die LDAP-Einstellungen müssen im Abschnitt LDAP richtig konfiguriert werden. Ist diese Einstellung deaktiviert, werden die Benutzer aus Daten erstellt, die von OpenSSO bereitgestellt werden.
@@ -11440,6 +11441,7 @@ please-upgrade-your-browser-to-use-this-feature=Bitte aktualisieren Sie ihren Br
 please-upload-a-file=Bitte laden Sie eine Datei hoch.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Bitte verwenden Sie Dateien mit gültigen Dateierweiterungen (JAR, LPKG oder WAR-Datei).
 please-upload-your-translation-file=Bitte laden Sie Ihre Übersetzungsdatei hoch (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Bitte überprüfen Sie die Parameter der Repositorykonfiguration.
 please-wait=Bitte warten.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Bitte warten Sie, bis der Publikationsprozess zur Remotesite abgeschlossen ist.
@@ -12330,6 +12332,7 @@ repeatable=Wiederholung möglich
 repeats=Wiederholungen
 replace=Ersetzen
 replace-certificate=Zertifikat ersetzen
+replace-files=Replace Files (Automatic Copy)
 replace-with=Ersetzen mit:
 replacement=Ersatz
 replacement-product=Ersatzprodukt
