--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centro de importación/exportación
 import-file=Importar archivo
 import-file-max-size=Tamaño máximo del archivo de importación
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=El tamaño máximo del archivo de importación debe estar dentro de los límites de tamaño máximo de petición de carga
+import-files=Import Files (Automatic Copy)
 import-fragments=Importar fragmentos
 import-from-ldap=Importar desde LDAP
 import-from-ldap-description=Establezca esta opción en verdadero si quiere importar los usuarios de LDAP después de iniciar sesión correctamente mediante OpenSSO. Es necesario configurar correctamente LDAP en la sección de LDAP. Si esta opción se establece en falso, los usuarios se crearán a partir de los datos proporcionados por OpenSSO.
@@ -11440,6 +11441,7 @@ please-upgrade-your-browser-to-use-this-feature=Por favor, actualice su navegado
 please-upload-a-file=Cargue un archivo.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Por favor, cargue un archivo con una extensión válida (JAR, LPKG o WAR).
 please-upload-your-translation-file=Cargue el archivo de traducción (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Por favor, revise los parámetros de configuración del repositorio.
 please-wait=Por favor, espere.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Espere mientras se completan los procesos de publicación en el sitio remoto.
@@ -12330,6 +12332,7 @@ repeatable=Repetible
 repeats=Se repite
 replace=Reemplazar
 replace-certificate=Reemplazar certificado
+replace-files=Replace Files (Automatic Copy)
 replace-with=Reemplazar por:
 replacement=Sustitución
 replacement-product=Producto de sustitución
