--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7200,6 +7200,7 @@ import-export-center=Impordi-/ekspordikeskus (Automatic Translation)
 import-file=Impordi fail (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Fragmentide importimine (Automatic Translation)
 import-from-ldap=Impordi LDAP-ist (Automatic Translation)
 import-from-ldap-description=Seadke see tõeseks, kui soovite importida kasutajad LDAP-ist pärast edukat sisselogimist OpenSSO kaudu. LDAP-sätted tuleb jaotises LDAP õigesti konfigureerida. Kui see on seatud väärtusele false, luuakse kasutajad OpenSSO esitatud andmete põhjal. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Selle funktsiooni kasutamiseks u
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Laadige üles kehtiva laiendiga fail (JAR-, LPKG- või WAR-fail). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Kontrollige oma hoidla konfiguratsiooni parameetreid. (Automatic Translation)
 please-wait=Oota. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Palun oodake, kuni avaldamisprotsessid kaugsaidil lõpule jõuavad. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Korratav
 repeats=Kordab (Automatic Translation)
 replace=Asendada (Automatic Translation)
 replace-certificate=Asenda sert (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Asenda: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
