--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -7200,6 +7200,7 @@ import-export-center=مرکز واردات/صادرات (Automatic Translation)
 import-file=فایل واردات (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=بارگذاری قطعات
 import-from-ldap=بارگیری از LDAP
 import-from-ldap-description=تنظیم این درست اگر شما می خواهید به واردات کاربران از LDAP پس از ورود موفق از طریق OpenSSO. تنظیمات LDAP باید به درستی در بخش LDAP پیکربندی شوند. اگر این کار نادرست تنظیم شود، کاربران از OpenSSO داده های ارائه شده ایجاد خواهند شد. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=لطفا برای استفاده
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=لطفا یک فایل با پسوند معتبر بارگذاری نمایید.(JAR, LPKG, or WAR File)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=لطفا پارامترهای پیکربندی منبع خود را تأیید کنید
 please-wait=لطفا صبر کنید.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=لطفا صبر کنید به عنوان فرایندهای انتشار کامل در سایت از راه دور. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=قابل تکرار
 repeats=تکرار
 replace=جایگزینی
 replace-certificate=جایگزینی گواهی (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=جایگزین با:
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
