--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -7200,6 +7200,7 @@ import-export-center=Tuonti- ja vientikeskus
 import-file=Tuo Tiedosto
 import-file-max-size=Tuontitiedoston enimmäiskoko
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Tuontitiedoston enimmäiskoon täytyy olla palvelimeenlatauspyynnön enimmäiskoon rajoissa
+import-files=Import Files (Automatic Copy)
 import-fragments=Tuo Sivunosat
 import-from-ldap=Tuo LDAP:ltä
 import-from-ldap-description=Aseta tämä todeksi, jos haluat tuoda käyttäjät LDAP:lta onnistuneen OpenSSO:n kautta tapahtuneen kirjautumisen jälkeen. LDAP-asetukset on määriteltävä oikein LDAP-osasa. Jos tämä asetetaan epätodeksi, käyttäjät luodaan OpenSSP:n antamista tiedoista.
@@ -11437,6 +11438,7 @@ please-upgrade-your-browser-to-use-this-feature=Päivitä selaimesi käyttääks
 please-upload-a-file=Lataa tiedosto.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Tuo sisään tiedosto kelvollisella päätteellä (JAR, LPKG tai WAR tiedosto).
 please-upload-your-translation-file=Lataa käännöstiedostosi (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Varmista tietovaraston asetusten parametrit.
 please-wait=Odota.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Odota kunnes julkaisuprosessi valmistuu etäsivustolla.
@@ -12327,6 +12329,7 @@ repeatable=Toistettava
 repeats=Toistot
 replace=Korvaa
 replace-certificate=Korvaa Varmenne
+replace-files=Replace Files (Automatic Copy)
 replace-with=Korvaa:
 replacement=Korvaus
 replacement-product=Korvaava tuote
