--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centre d'import/export
 import-file=Importer un fichier
 import-file-max-size=Taille maximale du fichier d'importation
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=La taille maximale du fichier d'importation doit être dans les limites de la taille maximale de la demande de téléchargement
+import-files=Import Files (Automatic Copy)
 import-fragments=Importer les fragments
 import-from-ldap=Importer depuis LDAP
 import-from-ldap-description=Réglez ce paramètre sur vrai si vous voulez importer des utilisateurs depuis le LDAP après une connexion réussie via OpenSSO. Les paramètres LDAP doivent être correctement configurés dans la section LDAP. Si ce paramètre est réglé sur faux, les utilisateurs seront créés à partir des données fournies par OpenSSO.
@@ -11440,6 +11441,7 @@ please-upgrade-your-browser-to-use-this-feature=Veuillez mettre à jour votre na
 please-upload-a-file=Veuillez téléverser un fichier.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Veuillez télécharger un fichier avec une extension valide (fichier JAR, LPKG, ou WAR).
 please-upload-your-translation-file=Veuillez téléverser votre fichier de traduction (.xliff, .xlf).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Veuillez vérifier les paramètres de configuration de votre dépôt svp.
 please-wait=Veuillez patienter.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Veuillez patienter pendant que les processus de publication se terminent sur le site distant.
@@ -12330,6 +12332,7 @@ repeatable=Qu'on peut répéter
 repeats=Répète
 replace=Remplacer
 replace-certificate=Remplacer le certificat
+replace-files=Replace Files (Automatic Copy)
 replace-with=Remplacer par :
 replacement=Remplacement
 replacement-product=Produit de remplacement
