--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centre d'import/export
 import-file=Importer un fichier
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Importer les fragments
 import-from-ldap=Importer depuis LDAP
 import-from-ldap-description=Réglez ce paramètre sur vrai si vous voulez importer des utilisateurs depuis le LDAP après une connexion réussie via OpenSSO. Les paramètres LDAP doivent être correctement configurés dans la section LDAP. Si ce paramètre est réglé sur faux, les utilisateurs seront créés à partir des données fournies par OpenSSO.
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Veuillez mettre à jour votre na
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Veuillez télécharger un fichier avec une extension valide (fichier JAR, LPKG, ou WAR).
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Veuillez vérifier les paramètres de configuration de votre dépôt svp.
 please-wait=Veuillez patienter.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Veuillez patienter pendant que les processus de publication se terminent sur le site distant.
@@ -12328,6 +12330,7 @@ repeatable=Qu'on peut répéter
 repeats=Répète
 replace=Remplacer
 replace-certificate=Remplacer le certificat
+replace-files=Replace Files (Automatic Copy)
 replace-with=Remplacer par :
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
