--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7200,6 +7200,7 @@ import-export-center=आयात/निर्यात केंद्र (Auto
 import-file=आयात फ़ाइल (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=आयात के टुकड़े (Automatic Translation)
 import-from-ldap=एलडीएपी से आयात (Automatic Translation)
 import-from-ldap-description=यदि आप ओपनएसएसओ के माध्यम से सफल लॉगिन के बाद एलडीएपी से उपयोगकर्ताओं को आयात करना चाहते हैं तो इसे सच में सेट करें। एलडीएपी सेटिंग्स को एलडीएपी सेक्शन में ठीक से कॉन्फ़िगर करने की जरूरत है। यदि यह झूठा सेट है, तो उपयोगकर्ताओं को ओपनएसएसओ द्वारा प्रदान किए गए डेटा से बनाया जाएगा। (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=कृपया इस फीच
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=कृपया एक वैध एक्सटेंशन (जार, एलपीकेजी, या वॉर फ़ाइल) के साथ एक फ़ाइल अपलोड करें। (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=कृपया अपने भंडार विन्यास मापदंडों को सत्यापित करें। (Automatic Translation)
 please-wait=कृपया प्रतीक्षा करो। (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=कृपया दूरस्थ साइट पर प्रकाशित प्रक्रियाओं के पूरा होने के रूप में प्रतीक्षा करें। (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=दुहराने योग्य
 repeats=पुनर्प्रसारण
 replace=बदलें (Automatic Translation)
 replace-certificate=प्रमाण पत्र बदलें (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=साथ बदलें: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
