--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import-/Exportközpont
 import-file=Fájl importálása
 import-file-max-size=Importfájl max. mérete
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Az importfájl maximális méretének a feltöltési kérelem maximális méretkorlátozásai közé kell esnie
+import-files=Import Files (Automatic Copy)
 import-fragments=Töredékek importálása
 import-from-ldap=Importálás LDAP-ből
 import-from-ldap-description=Állítsa Igaz értékre, ha a sikeres OpenSSO útján történő bejelentkezést követően importálni kívánja a felhasználókat az LDAP-ból. Az LDAP beállítást megfelelő módon konfigurálni kell az LDAP részben. Ha az érték Hamis, a felhasználók az OpenSSO által szolgáltatott adatok alapján jönnek létre.
@@ -11441,6 +11442,7 @@ please-upgrade-your-browser-to-use-this-feature=A funkció használatához újab
 please-upload-a-file=Kérjük, töltsön fel egy fájlt.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Tölts fel egy fájlt érvényes kiterjesztéssel (JAR, LPKG vagy WAR fájl).
 please-upload-your-translation-file=Töltse fel a fordításfájlját (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=A tárhely konfigurációs paraméterei ellenőrzésre szorulnak.
 please-wait=Kérlek várj!
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Várjon, amíg be nem fejeződik a közzététel a távoli webhelyen.
@@ -12331,6 +12333,7 @@ repeatable=Ismételhető
 repeats=Ismétlések
 replace=Csere
 replace-certificate=Tanúsítvány lecserélése
+replace-files=Replace Files (Automatic Copy)
 replace-with=Cseréld ki ezzel:
 replacement=Csere
 replacement-product=Cseretermék
