--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -7200,6 +7200,7 @@ import-export-center=Pusat Impor/Ekspor (Automatic Translation)
 import-file=Impor file (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Impor Fragmen (Automatic Translation)
 import-from-ldap=Impor dari LDAP (Automatic Translation)
 import-from-ldap-description=Atur ini ke true jika Anda ingin mengimpor pengguna dari LDAP setelah berhasil masuk melalui OpenSSO. Pengaturan LDAP perlu dikonfigurasi dengan benar di bagian LDAP. Jika ini diatur ke false, pengguna akan dibuat dari data yang disediakan OpenSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Silakan meng-upgrade browser And
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Silakan unggah file dengan ekstensi yang valid (JAR, LPKG, atau WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Harap verifikasi repositori Anda parameter konfigurasi.
 please-wait=Harap tunggu. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Harap tunggu karena proses publikasi selesai pada situs jarak jauh. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Berulang-ulang
 repeats=Mengulangi
 replace=Menggantikan (Automatic Translation)
 replace-certificate=Ganti Sertifikat (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Ganti dengan: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
