--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -7199,6 +7199,7 @@ import-export-center=Centro importazione/esportazione (Automatic Translation)
 import-file=Importa file (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Importa frammenti
 import-from-ldap=Importa da LDAP
 import-from-ldap-description=Impostare questa proprietà su true se si desidera importare gli utenti da LDAP dopo l'accesso riuscito tramite OpenSSO. Le impostazioni LDAP devono essere configurate correttamente nella sezione LDAP. Se questo è impostato su false, gli utenti verranno creati dai dati forniti da OpenSSO. (Automatic Translation)
@@ -11439,6 +11440,7 @@ please-upgrade-your-browser-to-use-this-feature=Per usare questa funzionalità o
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Carica un file con una estensione valida (JAR, LPKG, o WAR).
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Verifica i parametri di configurazione del repository.
 please-wait=Attendere prego.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Attendere il completamento dei processi di pubblicazione nel sito remoto. (Automatic Translation)
@@ -12329,6 +12331,7 @@ repeatable=Ripetibile
 repeats=Ripetizioni
 replace=Sostituire (Automatic Translation)
 replace-certificate=Sostituisci certificato (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Sostituisci con:
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
