--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7200,6 +7200,7 @@ import-export-center=Importavimo /eksportavimo centras (Automatic Translation)
 import-file=Importuoti failą (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Importuoti fragmentus (Automatic Translation)
 import-from-ldap=Importuoti iš LDAP (Automatic Translation)
 import-from-ldap-description=Nustatykite tai kaip teisinga, jei norite importuoti vartotojus iš LDAP po sėkmingo prisijungimo per OpenSSO. LDAP parametrai turi būti tinkamai sukonfigūruoti LDAP skyriuje. Jei nustatyta, kad tai klaidinga, vartotojai bus sukurti iš OpenSSO pateiktų duomenų. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Atnaujinkite naršyklę, kad ji 
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Įkelkite failą su galiojančiu plėtiniu (JAR, LPKG arba WAR failu). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Patikrinkite saugyklos konfigūracijos parametrus. (Automatic Translation)
 please-wait=palauk. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Palaukite, kol publikavimo procesai bus baigti nuotolinėje svetainėje. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Pakartotinai (Automatic Translation)
 repeats=Kartoja (Automatic Translation)
 replace=Pakeisti (Automatic Translation)
 replace-certificate=Pakeisti sertifikatą (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Pakeisti į: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
