--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -7200,6 +7200,7 @@ import-export-center=Pusat Import/Eksport (Automatic Translation)
 import-file=Import Fail (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Import Serpihan (Automatic Translation)
 import-from-ldap=Import dari LDAP (Automatic Translation)
 import-from-ldap-description=Setkan ini kepada benar jika anda mahu mengimport pengguna dari LDAP selepas log masuk yang berjaya melalui OpenSSO. Seting LDAP perlu dikonfigurasikan dengan betul dalam bahagian LDAP. Jika ini ditetapkan kepada palsu, pengguna akan dicipta daripada OpenSSO dengan syarat data. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Sila naik taraf pelayar anda unt
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Sila muat naik fail dengan sambungan yang sah (Fail JAR, LPKG, atau PERANG). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Sila sahkan parameter konfigurasi repositori anda. (Automatic Translation)
 please-wait=Sila tunggu. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Sila tunggu kerana proses penerbitan selesai di tapak jauh. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Boleh diulang (Automatic Translation)
 repeats=Mengulang (Automatic Translation)
 replace=Menggantikan (Automatic Translation)
 replace-certificate=Ganti Sijil (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Gantikan dengan: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
