--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import-/eksportsenter (Automatic Translation)
 import-file=Importere fil (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Importer fragmenter
 import-from-ldap=Import fra LDAP (Automatic Translation)
 import-from-ldap-description=Sett dette til sann hvis du vil importere brukerne fra LDAP etter vellykket pålogging gjennom OpenSSO. LDAP-innstillingene må konfigureres riktig i LDAP-delen. Hvis dette er satt til usann, opprettes brukerne fra OpenSSO-angitte data. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Vennligst oppgrader din nettlese
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Vennligst last opp en fil med gyldig filendelse (JAR, LPKG, eller WAR-fil).
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Vennligst sjekk konfigurasjonsparametrene til ditt depot.
 please-wait=Vennligst vent.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Vent mens publiseringsprosessene fullføres på det eksterne området. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Gjentagbart
 repeats=Repetering
 replace=Erstatt
 replace-certificate=Erstatt sertifikat (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Erstatt med: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
