--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import/export-center
 import-file=Bestand mporteren
 import-file-max-size=Max. grootte importbestand
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Max. grootte importbestand moet binnen de grenzen van de max. grootte van het uploadverzoek liggen
+import-files=Import Files (Automatic Copy)
 import-fragments=Importeer Fragmenten
 import-from-ldap=Importeren van het LDAP
 import-from-ldap-description=Stel dit in als 'waar' om gebruikers te importeren van het LDAP na een geslaagde aanmelding via OpenSSO. De LDAP-instellingen moeten correct geconfigureerd zijn in de LDAP-sectie. Als dit is ingesteld als 'vals' worden gebruikers aangemaakt op basis van data aangeleverd door OpenSSO.
@@ -11441,6 +11442,7 @@ please-upgrade-your-browser-to-use-this-feature=Upgrade uw browser om deze funct
 please-upload-a-file=Upload een bestand.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Upload een bestand met een geldige extensie (JAR-, LPKG- of WAR-bestand).
 please-upload-your-translation-file=Upload uw vertaalbestand (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Controleer de configuratieparameters van de bewaarplaats.
 please-wait=Even geduld graag.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Even geduld totdat het publicatieproces op de externe site is voltooid.
@@ -12331,6 +12333,7 @@ repeatable=Herhaalbaar
 repeats=Herhalingen
 replace=Vervangen
 replace-certificate=Certificaat vervangen
+replace-files=Replace Files (Automatic Copy)
 replace-with=Vervangen door:
 replacement=Vervanging
 replacement-product=Vervangend product
