--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7200,6 +7200,7 @@ import-export-center=Importar/exportar centro
 import-file=Importar arquivo
 import-file-max-size=Tamanho máximo de arquivo de importação
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=O tamanho máximo do arquivo de importação deve estar dentro dos limites de tamanho máximo
+import-files=Import Files (Automatic Copy)
 import-fragments=Importar Fragmentos
 import-from-ldap=Importar de LDAP
 import-from-ldap-description=Definir como verdade se desejar importar os usuários do LDAP após um login bem sucedido através do OpenSSO. As configurações do LDAP precisam ser configuradas adequadamente na seção do LDAP. Se definido como falso, o usuário será criado dos dados fornecidos pelo OpenSSO.
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Por favor, atualize seu browser 
 please-upload-a-file=Faça o upload de um arquivo.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Por favor, envie um arquivo com a extensão válida (JAR, LPKG ou WAR).
 please-upload-your-translation-file=Carregue seu arquivo de tradução (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Por favor, confirme os parâmetros de configuração do repositório.
 please-wait=Por favor aguarde.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Por favor, aguarde o processo de publicação ser concluído no site remoto.
@@ -12328,6 +12330,7 @@ repeatable=Repetível
 repeats=Repete
 replace=Substituir
 replace-certificate=Substituir Certificado
+replace-files=Replace Files (Automatic Copy)
 replace-with=Substituir por:
 replacement=Substituição
 replacement-product=Produto de substituição
