--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centro de Importação/Exportação (Automatic Translation)
 import-file=Arquivo de importação (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Fragmentos de importação (Automatic Translation)
 import-from-ldap=Import from LDAP (Automatic Copy)
 import-from-ldap-description=Defina isso como verdade se você quiser importar os usuários do LDAP após o login bem-sucedido através do OpenSSO. As configurações LDAP precisam ser configuradas corretamente na seção LDAP. Se isso for definido como falso, os usuários serão criados a partir de dados fornecidos pelo OpenSSO. (Automatic Translation)
@@ -11440,6 +11441,7 @@ please-upgrade-your-browser-to-use-this-feature=Por favor, atualize o seu browse
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Por favor, carregue um ficheiro com uma extensão válida (JAR, LPKG, ou ficheiro WAR).
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Por favor, confirme os parâmetros de configuração do repositório.
 please-wait=Por favor aguarde.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Aguarde como os processos de publicação concluídos no site remoto. (Automatic Translation)
@@ -12330,6 +12332,7 @@ repeatable=Repetível
 repeats=Repete-se
 replace=substituir (Automatic Translation)
 replace-certificate=Substituir certificado (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Substituir por:
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
