--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centru de import/export (Automatic Translation)
 import-file=Import fișier (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Import fragmente (Automatic Translation)
 import-from-ldap=Import din LDAP (Automatic Translation)
 import-from-ldap-description=Setați acest lucru la adevărat dacă doriți să importați utilizatorii din LDAP după conectarea reușită prin OpenSSO. Setările LDAP trebuie configurate corect în secțiunea LDAP. Dacă acest lucru este setat la fals, utilizatorii vor fi create din OpenSSO furnizate de date. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Te rog instaleaza o versiune nou
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Încărcați un fișier cu o extensie validă (JAR, LPKG sau WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Verificați parametrii de configurare a depozitului. (Automatic Translation)
 please-wait=te rog să aştepţi. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Așteptați ca procesele de publicare să se finalizeze pe site-ul la distanță. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Repeatabil
 repeats=Repetă (Automatic Translation)
 replace=Înlocui (Automatic Translation)
 replace-certificate=Înlocuire certificat (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Se înlocuiește cu: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
