--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -7200,6 +7200,7 @@ import-export-center=Centrum importu a exportu (Automatic Translation)
 import-file=Importovať súbor (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Import fragmentov (Automatic Translation)
 import-from-ldap=Import z LDAP (Automatic Translation)
 import-from-ldap-description=Nastavte to na hodnotu true, ak chcete importovať používateľov z LDAP po úspešnom prihlásení prostredníctvom OpenSSO. Nastavenia LDAP je potrebné správne nakonfigurovať v časti LDAP. Ak je táto hodnota nastavená na hodnotu false, používatelia sa vytvoria z údajov poskytnutých openSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Prosím aktualizujte si verziu s
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Nahrajte súbor s platnou príponou (JAR, LPKG alebo WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Overte, prosím, konfiguračné parametre vašeho úložiska.
 please-wait=Čakajte, prosím.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Počkajte, kým sa procesy publikovania dokončia na vzdialenej lokalite. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Opakovateľné
 repeats=Opakovania
 replace=Nahradiť (Automatic Translation)
 replace-certificate=Nahradiť certifikát (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Nahradiť: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
