--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -7200,6 +7200,7 @@ import-export-center=Središče za uvoz/izvoz (Automatic Translation)
 import-file=Uvozi datoteko (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Uvoz fragmentov (Automatic Translation)
 import-from-ldap=Uvoz iz LDAP (Automatic Translation)
 import-from-ldap-description=Nastavite to na res, če želite uvoziti uporabnike iz LDAP po uspešni prijavi prek OpenSSO. Nastavitve LDAP je treba pravilno konfigurirati v razdelku LDAP. Če je to nastavljeno na neresnično, bodo uporabniki ustvarjeni iz podatkov, ki jih zagotavlja OpenSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Za uporabo teh storitev morate n
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Prosimo, naložite datoteko z veljavno pripono (JAR, LPKG ali WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Preverite parametre konfiguracije skladišča. (Automatic Translation)
 please-wait=počakaj, prosim. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Počakajte, da se procesi objave zaključijo na oddaljenem mestu. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Ponavljajoče
 repeats=Ponavlja (Automatic Translation)
 replace=Zamenjati (Automatic Translation)
 replace-certificate=Zamenjaj potrdilo (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Zamenjajte z: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
