--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import-/exportcenter
 import-file=Importera fil
 import-file-max-size=Maximal storlek för importfil
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Maximal storlek för importfil måste vara inom gränserna för maxstorleken för uppladdningsförfrågan.
+import-files=Import Files (Automatic Copy)
 import-fragments=Importera fragment
 import-from-ldap=Importera från LDAP
 import-from-ldap-description=Ange detta som sant om du vill importera användare från LDAP efter inloggning via OpenSSO. LDAP-inställningarna måste konfigureras korrekt i LDAP-avsnittet. Om detta anges som falskt kommer användare att skapas med data från OpenSSO.
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Var vänlig och uppgradera din w
 please-upload-a-file=Ladda upp en fil.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Överför en fil med ett giltigt filnamnstillägg (JAR-, LPKG- eller WAR-fil).
 please-upload-your-translation-file=Ladda upp din översättningsfil (.xliff, .xlf, .zip).
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Verifiera konfigurationsparametrar för lagringsplats.
 please-wait=Vänta.
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Vänta medan publiceringsprocessen slutförs på fjärrplatsen.
@@ -12328,6 +12330,7 @@ repeatable=Kan upprepas
 repeats=Upprepningar
 replace=Ersätt
 replace-certificate=Ersätt certifikat
+replace-files=Replace Files (Automatic Copy)
 replace-with=Ersätt med:
 replacement=Ersättning
 replacement-product=Ersättningsprodukt
