--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -7200,6 +7200,7 @@ import-export-center=Alma/Verme Merkezi (Automatic Translation)
 import-file=Dosyayı İçe Aktar (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Parçaları İçeri Aktar (Automatic Translation)
 import-from-ldap=LDAP'den içeri aktarma (Automatic Translation)
 import-from-ldap-description=OpenSSO aracılığıyla başarılı oturum açtıktan sonra kullanıcıları LDAP'den almak istiyorsanız bunu true olarak ayarlayın. LDAP ayarlarının LDAP bölümünde düzgün yapılandırılması gerekir. Bu false olarak ayarlanırsa, kullanıcılar OpenSSO tarafından sağlanan verilerden oluşturulur. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Bu özelliği kullanabilmek içi
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Lütfen geçerli bir uzantıya (JAR, LPKG veya WAR Dosyası) sahip bir dosya yükleyin. (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Lütfen depo yapılandırma parametrelerinizi doğrulayın. (Automatic Translation)
 please-wait=Lütfen bekleyin. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Lütfen uzak sitede yayımlama işlemleri tamamlandıkça bekleyin. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Tekrarlanabilir
 repeats=Yinelenir (Automatic Translation)
 replace=Değiştirmek (Automatic Translation)
 replace-certificate=Sertifikayı Değiştir (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Şununla değiştir: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
