--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -7200,6 +7200,7 @@ import-export-center=Центр імпорту/експорту (Automatic Trans
 import-file=Файл імпорту (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Імпорт фрагментів (Automatic Translation)
 import-from-ldap=Імпорт з LDAP (Automatic Translation)
 import-from-ldap-description=Встановіть значення true, якщо ви бажаєте імпортувати користувачів з LDAP після успішного входу до системи через OpenSSO. Параметри LDAP потрібно правильно налаштувати в розділі LDAP. Якщо встановлено значення false, користувачі будуть створені з наданих даних OpenSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Будь ласка оновіт
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Будь ласка, завантажте файл з коректним розширенням (JAR, LPKG або WAR File). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Будь ласка, перевірте параметри налаштування сховища. (Automatic Translation)
 please-wait=Будь ласка, зачекай. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Зачекайте, доки процеси публікації завершаться на віддаленому сайті. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Може повторюватися
 repeats=Повторює (Automatic Translation)
 replace=Замінити (Automatic Translation)
 replace-certificate=Замінити сертифікат (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Замінити на: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
