--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -7200,6 +7200,7 @@ import-export-center=Trung tâm Xuất nhập khẩu (Automatic Translation)
 import-file=Nhập tệp (Automatic Translation)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Chuyển nhập Đoạn văn (Automatic Translation)
 import-from-ldap=Nhập từ LDAP (Automatic Translation)
 import-from-ldap-description=Đặt điều này thành true nếu bạn muốn nhập người dùng từ LDAP sau khi đăng nhập thành công thông qua OpenSSO. Cài đặt LDAP cần được cấu hình đúng trong phần LDAP. Nếu điều này được đặt thành false, người dùng sẽ được tạo từ dữ liệu được cung cấp OpenSSO. (Automatic Translation)
@@ -11438,6 +11439,7 @@ please-upgrade-your-browser-to-use-this-feature=Nâng cấp trình duyệt để
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Vui lòng tải lên tệp có phần mở rộng hợp lệ (JAR, LPKG hoặc Tệp WAR). (Automatic Translation)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Vui lòng kiểm tra lại tham số cấu hình kho lưu trữ (repository) của bạn.
 please-wait=Hãy chờ. (Automatic Translation)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Vui lòng chờ khi tiến trình phát hành hoàn tất trên site từ xa. (Automatic Translation)
@@ -12328,6 +12330,7 @@ repeatable=Lặp lại được
 repeats=Lặp lại (Automatic Translation)
 replace=Thay thế (Automatic Translation)
 replace-certificate=Thay thế chứng chỉ (Automatic Translation)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Thay thế bằng: (Automatic Translation)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
