--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -7200,6 +7200,7 @@ import-export-center=Import/Export Center (Automatic Copy)
 import-file=Import File (Automatic Copy)
 import-file-max-size=Import file max size (Automatic Copy)
 import-file-max-size-must-be-within-upload-request-max-size-boundaries=Import file max size must be within upload request max size boundaries (Automatic Copy)
+import-files=Import Files (Automatic Copy)
 import-fragments=Import Fragments (Automatic Copy)
 import-from-ldap=Import from LDAP (Automatic Copy)
 import-from-ldap-description=Set this to true if you want to import the users from LDAP after successful login through OpenSSO. The LDAP settings need to be configured properly in the LDAP section. If this is set to false, the users will be created from OpenSSO provided data. (Automatic Copy)
@@ -11441,6 +11442,7 @@ please-upgrade-your-browser-to-use-this-feature=Om deze eigenschap te gebruiken 
 please-upload-a-file=Please upload a file. (Automatic Copy)
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Please upload a file with a valid extension (JAR, LPKG, or WAR File). (Automatic Copy)
 please-upload-your-translation-file=Please upload your translation file (.xliff, .xlf, .zip). (Automatic Copy)
+please-upload-your-translation-files=Please upload your translation files (.xliff, .xlf, or .zip). It is possible to select multiple files. (Automatic Copy)
 please-verify-your-repository-configuration-parameters=Controleer de configuratieparameters van de bewaarplaats.
 please-wait=Please wait. (Automatic Copy)
 please-wait-as-the-publish-processes-complete-on-the-remote-site=Please wait as the publish processes complete on the remote site. (Automatic Copy)
@@ -12331,6 +12333,7 @@ repeatable=Herhaalbaar
 repeats=Repeats (Automatic Copy)
 replace=Replace (Automatic Copy)
 replace-certificate=Replace Certificate (Automatic Copy)
+replace-files=Replace Files (Automatic Copy)
 replace-with=Replace with: (Automatic Copy)
 replacement=Replacement (Automatic Copy)
 replacement-product=Replacement Product (Automatic Copy)
